--- a/Shared/Proxy/corosync.conf
+++ b/Shared/Proxy/corosync.conf
@@ -31,7 +31,7 @@ quorum {
 }
 
 nodelist {
-    # Comunicação entre os nós do cluster usando a rede interna
+    # Comunicação entre os nós do cluster na rede interna
     node {
         name: proxy1
         nodeid: 1
